tests/types/errors/assign_array_str_to_array_i32.mog
var nums Array<i32> = ["one", "two"]
